test_scores/negative_dimers/features/P40926.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P40926.pkl.xz